# forget3d

./: CMakeLists.txt
android/: AndroidManifest.xml  build.gradle
android/jni/: CMakeLists.txt
android/jni/f3d/: Android.mk
android/jni/src/: lights.cpp  md2viewer.cpp  stars.cpp
data/: push.bat  push.sh
include/: f3d.h  f3d_gl.h  fog.h  mathlib.h  model_g3d.h  model_ms3d.h  utils.h  world.h
projects/: forget3d.cbp  triangle.cbp
src/: CMakeLists.txt  camera.cpp  fog.cpp  font.cpp  image.cpp  light.cpp  mathlib.cpp  mesh.cpp  model_ms3d.cpp  shader.cpp  utils.cpp  world.cpp
test/: CMakeLists.txt  g3dviewer.cpp  triangle.cpp
